Refactor x others stuffs

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="container">
             <!-- Logo and responsive toggle -->
             <div class="navbar-header">           
-                <a class="navbar-brand" href="#"><span class="glyphicon glyphicon-globe"></span>Décomptes de cas COVID</a>
+                <a class="navbar-brand" href="#"><span class="glyphicon glyphicon-globe"></span>&nbsp;Décomptes des cas COVID</a>
             </div>
       
         </div>
